--- a/roles/richard/defaults/main.yml
+++ b/roles/richard/defaults/main.yml
@@ -1,3 +1,10 @@
 ---
-richard_venv: /usr/lib/virtualenvs/richard/
-richard_source: /vagrant_data
+richard_user: richard
+richard_group: richard
+richard_venv: /srv/pyvideo/venv
+richard_dir: /srv/pyvideo
+richard_source: /srv/pyvideo/richard
+richard_repo: "https://github.com/pyvideo/richard.git"
+# What version of the repository to check out. This can be the full 40-character
+# SHA-1 hash, the literal string HEAD, a branch name, or a tag name.
+richard_version: 76757262d79b74fc278ed37dc0b7ed82bb612d8f
