Richard role changes parameterizing django configurations to pass to tasks moving collectstatic to tasks from handlers, it won't rerun if there is nothing to update

--- a/roles/richard/defaults/main.yml
+++ b/roles/richard/defaults/main.yml
@@ -8,3 +8,4 @@ richard_repo: "https://github.com/pyvideo/richard.git"
 # What version of the repository to check out. This can be the full 40-character
 # SHA-1 hash, the literal string HEAD, a branch name, or a tag name.
 richard_version: 76757262d79b74fc278ed37dc0b7ed82bb612d8f
+richard_configuration: Dev
