--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: postgresql system dependencies are installed
-  apt: pkg={{ item }} state=installed
+  apt: pkg={{ item }} state=installed update_cache=yes
   with_items:
     - postgresql
     - postgresql-server-dev-9.3
