--- a/roles/richard/tasks/main.yml
+++ b/roles/richard/tasks/main.yml
@@ -1,4 +1,22 @@
 ---
+- name: apt cache is up to date
+  apt: update_cache=yes
+
+- name: required packages are installed
+  apt: pkg={{ item }} state=installed
+  with_items:
+    build-essential
+    python-dev
+    python-pip
+    libxml2
+    libxslt-dev
+    libxslt1-dev
+
+- name: install pip from pypi
+  pip: name=pip version=1.5.6
+
+- name: install virtualenv
+  pip: name=virtualenv version=1.11.6
 
 - name: richard user exists
   user: name={{ richard_user }} group={{ richard_group }} shell=/bin/bash state=present
@@ -21,7 +39,6 @@
        chdir={{ richard_source }}
        virtualenv={{ richard_venv }}
   sudo_user: {{ richard_user }}
-
 
 - name: richard syncdb
   environment:
