all hosts, whatever

--- a/webservers.yml
+++ b/webservers.yml
@@ -1,8 +1,9 @@
 ---
-- hosts: webservers
+- hosts: all
   sudo: yes
   vars_files:
     - vars/all.yml
     - vars/secret.yml
   roles:
+    - common
     - richard
