--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -4,9 +4,15 @@
   with_items:
     - postgresql
     - postgresql-server-dev-9.3
+    - build-essential
+    - python-dev
+    - python-pip
 
 - name: postgresql is running
   service: name=postgresql state=started
+
+- name: pip is installed from pip
+  pip: name=pip version=1.5.6
 
 - name: python postgres dependencies are installed
   pip: name=psycopg2 state=present
@@ -23,5 +29,3 @@
 - name: postgresql richard role exists
   postgresql_user: name={{ db_user }} db={{ db_name }} role_attr_flags='NOSUPERUSER,NOCREATEROLE,NOCREATEDB'
   sudo_user: postgres
-
-
