--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -22,7 +22,7 @@
     - ack-grep
 
 - name: install pip from pypi
-  pip: name=pip version=1.5.6
+  pip: name=pip extra_args="--upgrade"
   tags: pip
 
 - name: install virtualenv
