--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -12,7 +12,7 @@
   service: name=postgresql state=started
 
 - name: pip is installed from pip
-  pip: name=pip version=1.5.6
+  pip: name=pip extra_args="--upgrade"
 
 - name: python postgres dependencies are installed
   pip: name=psycopg2 state=present
