--- a/rax_create.yml
+++ b/rax_create.yml
@@ -31,7 +31,9 @@
     - name: Add new instance to host group
       local_action: 
         module: add_host
-        hostname: "{{ item.accessIPv4 }}"
+        hostname: "{{ item.name}}"
+        ansible_ssh_host: "{{ item.rax_accessipv4 }}"
+        ansible_ssh_pass: "{{ item.rax_adminpass }}"
         groupname: raxhosts
       with_items: rax.success
       when: rax.action == 'create'
