--- a/roles/richard/defaults/main.yml
+++ b/roles/richard/defaults/main.yml
@@ -4,9 +4,16 @@ richard_group: richard
 richard_venv: /srv/pyvideo/venv
 richard_dir: /srv/pyvideo
 richard_uwsgi_ini: /srv/pyvideo/uwsgi.ini
+richard_port: 8000
 richard_source: /srv/pyvideo/richard
 richard_repo: "https://github.com/pyvideo/richard.git"
 # What version of the repository to check out. This can be the full 40-character
 # SHA-1 hash, the literal string HEAD, a branch name, or a tag name.
 richard_version: 76757262d79b74fc278ed37dc0b7ed82bb612d8f
-richard_configuration: Dev
+richard_env:
+  - DJANGO_DATABASE: "postgres://:6415/richard"
+  - DJANGO_DEBUG: False
+  - DJANGO_CONFIGURATION: Dev
+  - DJANGO_SECRET_KEY: "{{ lookup('passwd', '/tmp/richard_secret') }}"
+  - RICHARD_API: True
+  - RICHARD_SITE_URL: "http://127.0.0.1:8000"
