splitting out things like this was overkill for our site and we do not need to do fine grained things like that yet

--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,10 @@
 ---
-- include: dbservers.yml
-- include: webservers.yml
+- hosts: pyvideo
+  sudo: yes
+  vars_files:
+    - vars/all.yml
+    - vars/secret.yml
+  roles:
+    - common
+    - richard
+    - postgresql
