--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,11 @@
 ---
-- hosts: pyvideo
+- hosts: all
   sudo: yes
   vars_files:
     - vars/all.yml
     - vars/secret.yml
+  remote_user: root
   roles:
     - common
-    - richard
     - postgresql
+    - richard
