--- a/roles/richard/defaults/main.yml
+++ b/roles/richard/defaults/main.yml
@@ -3,9 +3,11 @@ richard_user: richard
 richard_group: richard
 richard_venv: /srv/pyvideo/venv
 richard_dir: /srv/pyvideo
-richard_uwsgi_ini: /srv/pyvideo/uwsgi.ini
+richard_uwsgi_ini: /srv/pyvideo/richard.wsgi.ini
 richard_port: 8000
 richard_source: /srv/pyvideo/richard
+richard_static: /srv/pyvideo/richard/src/richard/static
+richard_static_root: /srv/pyvideo/richard/src/richard
 richard_repo: "https://github.com/pyvideo/richard.git"
 # What version of the repository to check out. This can be the full 40-character
 # SHA-1 hash, the literal string HEAD, a branch name, or a tag name.
