--- a/roles/richard/tasks/main.yml
+++ b/roles/richard/tasks/main.yml
@@ -21,10 +21,6 @@
        chdir="{{ richard_source }}"
        extra_args="-e"
 
-- name: uwsgi is installed
-  pip: name=uwsgi
-       version=2.0.9
-
 - name: richard database is synced with models
   django_manage: >
     command="syncdb --noinput --migrate"
@@ -49,7 +45,7 @@
   sudo_user: "{{ richard_user }}"
   environment: "{{ richard_env }}"
 
-- name: richard uwsgi.ini is configured
+- name: richard uwsgi.ini is available
   template: >
     src=richard.uwsgi.ini.j2
     dest="{{ richard_uwsgi_ini }}"
@@ -57,11 +53,23 @@
     group=root
     mode=644
 
-- name: richard supervisor.conf is configured
+- name: upstart job is configured
   template: >
-    src=richard.supervisor.conf.j2
-    dest=/etc/supervisor/conf.d/richard.conf
-    owner=root
-    group=root
-    mode=600
-  notify: start richard
+    src=richard.uwsgi.conf.j2
+    dest=/etc/init/richard.uwsgi.conf
+  notify:
+    - restart richard
+
+- name: richard nginx site is available
+  template: >
+    src=richard_web.conf.j2
+    dest=/etc/nginx/sites-available/richard_web.conf
+
+- name: richard nginx site is enabled
+  file:
+    src=/etc/nginx/sites-available/richard_web.conf
+    dest=/etc/nginx/sites-enabled/richard_web.conf
+    state=link
+  notify:
+    - restart nginx
+
