Fix vagrant environment bits
* add additional task to richard main.yml to touch the uwsgi log file
  before symlinking it because it doesn't exist, yet
* add requirements.txt file with ansible so you can create the
  virtual environment you need to run ansible
* tweak Vagrantfile setting the memory for the vm so that it has
  enough memory to compile lxml
* add some rough instructions to README.md that should get rewritten

Fixes #4

--- a/roles/richard/tasks/main.yml
+++ b/roles/richard/tasks/main.yml
@@ -8,6 +8,9 @@
 - name: helpful links to nginx logs exist
   file: src=/var/log/nginx dest="{{ richard_dir }}/logs/nginx" state=link
 
+- name: make sure upstart uwsgi log file exists before we symlink it
+  file: path=/var/log/upstart/richard.uwsgi.log state=touch
+
 - name: helpful link to upstart uwsgi log exists
   file: src=/var/log/upstart/richard.uwsgi.log dest="{{ richard_dir }}/logs/richard.uwsgi.log" state=link
 
