--- a/roles/richard/defaults/main.yml
+++ b/roles/richard/defaults/main.yml
@@ -7,11 +7,10 @@ richard_uwsgi_ini: /srv/pyvideo/richard.wsgi.ini
 richard_port: 8000
 richard_source: /srv/pyvideo/richard
 richard_static: /srv/pyvideo/richard/src/richard/static
-# use my repo until pull request https://github.com/pyvideo/richard/pull/272 is merged
-richard_repo: "https://github.com/codersquid/richard.git"
+richard_repo: "https://github.com/pyvideo/richard.git"
 # What version of the repository to check out. This can be the full 40-character
 # SHA-1 hash, the literal string HEAD, a branch name, or a tag name.
-richard_version: uwsgi-configuration
+richard_version: master
 DATABASE_URL: "postgres://:5432/richard"
 DJANGO_DEBUG: False
 DJANGO_CONFIGURATION: Dev
