Rework some things so we can easily have site-specific stuff
This adds site_* variables and task that make it easy to have another
repository with site-specific templates and configuration in it which
richard can use.

--- a/roles/richard/defaults/main.yml
+++ b/roles/richard/defaults/main.yml
@@ -16,6 +16,15 @@ richard_repo: "https://github.com/pyvideo/richard.git"
 # What version of the repository to check out. This can be the full 40-character
 # SHA-1 hash, the literal string HEAD, a branch name, or a tag name.
 richard_version: master
+
+# If you have a site repository that holds override templates and settings
+# then you can set it with site_repo. It'll get cloned in provisioning at
+# the version specified.
+site_repo: ""
+site_version: ""
+site_source: ""
+site_path: ""
+
 DATABASE_URL: "postgres://:5432/richard"
 DJANGO_DEBUG: False
 DJANGO_CONFIGURATION: Dev
@@ -23,4 +32,4 @@ DJANGO_SECRET_KEY: "dummy"
 RICHARD_API: True
 RICHARD_SITE_URL: "http://127.0.0.1:8000"
 DJANGO_SETTINGS_MODULE: "richard.config.settings"
-richard_environment: { DATABASE_URL: "{{ DATABASE_URL }}", DJANGO_DEBUG: "{{ DJANGO_DEBUG }}", DJANGO_CONFIGURATION: "{{ DJANGO_CONFIGURATION }}", DJANGO_SECRET_KEY: "{{ DJANGO_SECRET_KEY }}", RICHARD_API: "{{ RICHARD_API }}", RICHARD_SITE_URL: "{{ RICHARD_SITE_URL }}" }
+richard_environment: { DATABASE_URL: "{{ DATABASE_URL }}", DJANGO_DEBUG: "{{ DJANGO_DEBUG }}", DJANGO_CONFIGURATION: "{{ DJANGO_CONFIGURATION }}", DJANGO_SECRET_KEY: "{{ DJANGO_SECRET_KEY }}", RICHARD_API: "{{ RICHARD_API }}", RICHARD_SITE_URL: "{{ RICHARD_SITE_URL }}", SITE_PATH: "{{ site_path }}" }
