--- a/roles/richard/tasks/main.yml
+++ b/roles/richard/tasks/main.yml
@@ -16,6 +16,7 @@
 
 - name: richard repo is cloned
   git: repo="{{ richard_repo }}"
+       remote="{{ richard_remote }}"
        dest="{{ richard_source }}"
        version="{{ richard_version }}"
   sudo_user: "{{ richard_user }}"
