--- a/roles/richard/tasks/main.yml
+++ b/roles/richard/tasks/main.yml
@@ -52,7 +52,7 @@
 
 - name: richard database is synced with models
   django_manage: >
-    command="syncdb --noinput --migrate"
+    command="syncdb --noinput"
     app_path="{{ richard_source }}"
     settings="{{ DJANGO_SETTINGS_MODULE }}"
   sudo_user: "{{ richard_user }}"
